# tetris-qt6

./: .gitignore  CMakeLists.txt  README.md
src/: gameboard.cpp  gameboard.h  gamewindow.cpp  gamewindow.h  main.cpp  tetromino.cpp  tetromino.h
